@@ -141,6 +141,8 @@ namespace Mono.Cecil {
 			if (methodTable == null)
 				return;
 
+			RVA method_rva = RVA.Zero;
+
 			for (int i = 0; i < methodTable.Rows.Count; i++) {
 				MethodRow methodRow = methodTable[i];
 
@@ -148,7 +150,11 @@ namespace Mono.Cecil {
 
 				MethodDefinition method = (MethodDefinition) assembly.MainModule.LookupByToken (methodToken);
 
-				methodRow.RVA = reflection_writer.CodeWriter.WriteMethodBody (method);
+				method_rva = method_rva != RVA.Zero
+					? method_rva
+					: reflection_writer.CodeWriter.WriteMethodBody (method);
+
+				methodRow.RVA = method_rva;
 			}
 		}
 
