@@ -1,3 +1,9 @@
+2009-07-28  Jb Evain  <jbevain@novell.com>
+
+	* Mono.Cecil/AssemblyStripper.cs: Make all methods share
+	the same body.
+	
+
 2009-07-16  Jb Evain  <jbevain@novell.com>
 
 	* Mono.Cecil/AssemblyFactory.cs
